--- a/news.txt
+++ b/news.txt
@@ -1,2 +1,5 @@
 Versão 1.0-Seth, de 17 de dezembro de 2017
 	-Rascunho da introdução
+
+Versão 1.0-Seth, de 11 de janeiro de 2018
+	-Módulo 1.0 - polimorfismo - é iniciado
